default/objects/success__Vote__c/success__Vote__c.object-meta.xml
<CustomObject>
    <description>Records the individual votes submitted by users for Inspire Edition Channel Polls. Users may vote more than once within each Poll but multiple votes for the same Content Item (Leaderboard) will only count once.</description>
    <label>Vote</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Vote ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>