default/objects/success__Vote__c/fields/success__Choice__c.field-meta.xml
<CustomField>
    <fullName>success__Choice__c</fullName>
    <label>Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>