default/objects/success__Vote__c/fields/success__Poll__c.field-meta.xml
<CustomField>
    <fullName>success__Poll__c</fullName>
    <label>Poll</label>
    <referenceTo>success__Poll__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>