default/objects/success__Vote__c/fields/success__User__c.field-meta.xml
<CustomField>
    <fullName>success__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>